--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -76,7 +76,7 @@
         </section>
     </article>
 </div>
-<% elsif @recital.id == 2 or @recital.id == 5 %>
+<% elsif @recital.id == 2 %>
 <br/>
 <div class="outer-container light-panel">
     <h2 class="align-center">付款通知</h2>
@@ -96,6 +96,29 @@
         <section class="info-footer">
             <h3 class="important-message">付款成功后请将音乐会城市+订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
             收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询，演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
+        </section>
+    </article>
+</div>
+<% elsif @recital.id == 5 %>
+<br/>
+<div class="outer-container light-panel">
+    <h2 class="align-center">付款通知</h2>
+    <article class="intent line-height-2">
+        <section>
+            <h3 class="info-header">
+            Animenz动漫钢琴音乐会<%= @recital.city %>站付款方式，因暂未能开通在线支付，给您带来的不便敬请谅解，<%= @recital.city %>站指定汇款账户：
+            </h3>
+        </section>
+        <section class="pay-methods">
+            <ul>
+                <li>工商银行：6212262402015869551，户名：杨倩，开户行：工商银行贵阳纪念塔支行</li>
+                <li>建设银行：6217007100022904754，户名：杨倩，开户行：建行贵阳乌当支行</li>
+                <li>支付宝账号：15519026686</li>
+            </ul>
+        </section>
+        <section class="info-footer">
+            <h3 class="important-message">付款成功后请将音乐会城市+订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
+            8月8号统一快递快递票纸，同时将快递订单号发至您的邮箱方便您查询，演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
         </section>
     </article>
 </div>
